@@ -1,10 +1,10 @@
 package ai.labs.eddi.modules.nlp;
 
-import ai.labs.eddi.configs.packages.model.ExtensionDescriptor;
-import ai.labs.eddi.configs.packages.model.ExtensionDescriptor.ConfigValue;
+import ai.labs.eddi.configs.workflows.model.ExtensionDescriptor;
+import ai.labs.eddi.configs.workflows.model.ExtensionDescriptor.ConfigValue;
 import ai.labs.eddi.engine.lifecycle.ILifecycleTask;
 import ai.labs.eddi.engine.lifecycle.exceptions.IllegalExtensionConfigurationException;
-import ai.labs.eddi.engine.lifecycle.exceptions.PackageConfigurationException;
+import ai.labs.eddi.engine.lifecycle.exceptions.WorkflowConfigurationException;
 import ai.labs.eddi.engine.lifecycle.exceptions.UnrecognizedExtensionException;
 import ai.labs.eddi.engine.memory.IConversationMemory;
 import ai.labs.eddi.engine.memory.IConversationMemory.IWritableConversationStep;
@@ -38,13 +38,16 @@ import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static ai.labs.eddi.configs.packages.model.ExtensionDescriptor.FieldType.BOOLEAN;
+import static ai.labs.eddi.configs.workflows.model.ExtensionDescriptor.FieldType.BOOLEAN;
 import static ai.labs.eddi.engine.memory.ContextUtilities.retrieveContextLanguageFromLongTermMemory;
+import static ai.labs.eddi.engine.memory.MemoryKeys.EXPRESSIONS_PARSED;
+import static ai.labs.eddi.engine.memory.MemoryKeys.INPUT;
+import static ai.labs.eddi.engine.memory.MemoryKeys.INPUT_NORMALIZED;
+import static ai.labs.eddi.engine.memory.MemoryKeys.INTENTS;
 import static ai.labs.eddi.modules.nlp.DictionaryUtilities.convertQuickReplies;
 import static ai.labs.eddi.modules.nlp.DictionaryUtilities.extractExpressions;
 import static ai.labs.eddi.utils.RuntimeUtilities.isNullOrEmpty;
 import static ai.labs.eddi.utils.StringUtilities.joinStrings;
-
 
 /**
  * @author ginccc
@@ -62,11 +65,7 @@ public class InputParserTask implements ILifecycleTask {
     private static final Pattern NON_ALPHANUMERIC = Pattern.compile("[^a-zA-Z0-9 ]+");
     private final ObjectMapper objectMapper;
 
-    private static final String KEY_INPUT = "input";
-    private static final String KEY_INPUT_NORMALIZED = KEY_INPUT + ":normalized";
     private static final String KEY_EXPRESSIONS = "expressions";
-    private static final String KEY_EXPRESSIONS_PARSED = KEY_EXPRESSIONS + ":parsed";
-    private static final String KEY_INTENT = "intents";
     private static final String KEY_TYPE = "type";
     private static final String KEY_CONFIG = "config";
 
@@ -79,10 +78,9 @@ public class InputParserTask implements ILifecycleTask {
 
     @Inject
     public InputParserTask(IExpressionProvider expressionProvider,
-                           @ParserNormalizerExtensions Map<String, Provider<INormalizerProvider>> normalizerProviders,
-                           @ParserDictionaryExtensions Map<String, Provider<IDictionaryProvider>> dictionaryProviders,
-                           @ParserCorrectionExtensions Map<String, Provider<ICorrectionProvider>> correctionProviders,
-                           ObjectMapper objectMapper) {
+            @ParserNormalizerExtensions Map<String, Provider<INormalizerProvider>> normalizerProviders,
+            @ParserDictionaryExtensions Map<String, Provider<IDictionaryProvider>> dictionaryProviders,
+            @ParserCorrectionExtensions Map<String, Provider<ICorrectionProvider>> correctionProviders, ObjectMapper objectMapper) {
         this.expressionProvider = expressionProvider;
         this.normalizerProviders = normalizerProviders;
         this.dictionaryProviders = dictionaryProviders;
@@ -104,8 +102,8 @@ public class InputParserTask implements ILifecycleTask {
     public void execute(IConversationMemory memory, Object component) {
         final IInputParser parser = (IInputParser) component;
 
-        //parse user input to meanings
-        final IData<String> inputData = memory.getCurrentStep().getLatestData(KEY_INPUT);
+        // parse user input to meanings
+        final IData<String> inputData = memory.getCurrentStep().getLatestData(INPUT);
         if (inputData == null) {
             return;
         }
@@ -126,7 +124,6 @@ public class InputParserTask implements ILifecycleTask {
 
         storeResultInMemory(memory.getCurrentStep(), parsedSolutions, parser.getConfig());
     }
-
 
     private List<IDictionary> prepareTemporaryDictionaries(IConversationMemory memory) {
         List<ConversationOutput> conversationOutputs = memory.getConversationOutputs();
@@ -150,16 +147,12 @@ public class InputParserTask implements ILifecycleTask {
     }
 
     private static List<QuickReply> extractQuickReplies(List<Map<String, Object>> quickReplyOutputList) {
-        return quickReplyOutputList.stream()
-                .filter(Objects::nonNull)
-                .map(quickReplyData -> {
-                    String value = quickReplyData.get("value").toString();
-                    String expressions = quickReplyData.get("expressions") != null ?
-                            quickReplyData.get("expressions").toString() :
-                            generateExpression(value);
-                    return new QuickReply(value, expressions, (Boolean) quickReplyData.get("default"));
-                })
-                .collect(Collectors.toList());
+        return quickReplyOutputList.stream().filter(Objects::nonNull).map(quickReplyData -> {
+            String value = quickReplyData.get("value").toString();
+            Object exprObj = quickReplyData.get("expressions");
+            String expressions = (exprObj != null && !exprObj.toString().isBlank()) ? exprObj.toString() : generateExpression(value);
+            return new QuickReply(value, expressions, (Boolean) quickReplyData.get("default"));
+        }).toList();
     }
 
     private static String generateExpression(String value) {
@@ -169,24 +162,19 @@ public class InputParserTask implements ILifecycleTask {
 
     private static void storeNormalizedResultInMemory(IWritableConversationStep currentStep, String normalizedInput) {
         if (!isNullOrEmpty(normalizedInput)) {
-            IData<String> expressionsData = new Data<>(KEY_INPUT_NORMALIZED, normalizedInput);
+            IData<String> expressionsData = new Data<>(INPUT_NORMALIZED.key(), normalizedInput);
             currentStep.storeData(expressionsData);
-            currentStep.addConversationOutputString(KEY_INPUT, normalizedInput);
+            currentStep.addConversationOutputString(INPUT.key(), normalizedInput);
         }
     }
 
-    private void storeResultInMemory(IWritableConversationStep currentStep,
-                                     List<RawSolution> parsedSolutions,
-                                     IInputParser.Config parserConfig) {
+    private void storeResultInMemory(IWritableConversationStep currentStep, List<RawSolution> parsedSolutions, IInputParser.Config parserConfig) {
         if (!parsedSolutions.isEmpty()) {
-            Solution solution =
-                    extractExpressions(parsedSolutions,
-                            parserConfig.isIncludeUnused(),
-                            parserConfig.isIncludeUnknown()).getFirst();
+            Solution solution = extractExpressions(parsedSolutions, parserConfig.isIncludeUnused(), parserConfig.isIncludeUnknown()).getFirst();
 
             Expressions newExpressions = solution.getExpressions();
             if (parserConfig.isAppendExpressions() && !newExpressions.isEmpty()) {
-                IData<String> latestExpressions = currentStep.getLatestData(KEY_EXPRESSIONS_PARSED);
+                IData<String> latestExpressions = currentStep.getLatestData(EXPRESSIONS_PARSED);
                 if (latestExpressions != null) {
                     Expressions currentExpressions = expressionProvider.parseExpressions(latestExpressions.getResult());
                     currentExpressions.addAll(newExpressions);
@@ -194,26 +182,22 @@ public class InputParserTask implements ILifecycleTask {
                 }
 
                 String expressionString = joinStrings(", ", newExpressions);
-                IData<String> expressionsData = new Data<>(KEY_EXPRESSIONS_PARSED, expressionString);
+                IData<String> expressionsData = new Data<>(EXPRESSIONS_PARSED.key(), expressionString);
                 currentStep.storeData(expressionsData);
                 currentStep.addConversationOutputString(KEY_EXPRESSIONS, expressionString);
 
-                List<String> intents = newExpressions.stream().
-                        map(Expression::getExpressionName).
-                        distinct().collect(Collectors.toList());
+                List<String> intents = newExpressions.stream().map(Expression::getExpressionName).distinct().toList();
 
-                Data<List<String>> intentData = new Data<>(KEY_INTENT, intents);
+                Data<List<String>> intentData = new Data<>(INTENTS.key(), intents);
                 currentStep.storeData(intentData);
-                currentStep.addConversationOutputList(KEY_INTENT, intents);
+                currentStep.addConversationOutputList(INTENTS.key(), intents);
             }
         }
     }
 
     @Override
     public Object configure(Map<String, Object> configuration, Map<String, Object> extensions)
-            throws PackageConfigurationException,
-            IllegalExtensionConfigurationException,
-            UnrecognizedExtensionException {
+            throws WorkflowConfigurationException, IllegalExtensionConfigurationException, UnrecognizedExtensionException {
 
         var config = new IInputParser.Config();
 
@@ -256,9 +240,9 @@ public class InputParserTask implements ILifecycleTask {
         return new InputParser(normalizers, dictionaries, corrections, config);
     }
 
-
     private List<Map<String, Object>> convertObjectToListOfMaps(Object extension) {
-        return objectMapper.convertValue(extension, new TypeReference<>() {});
+        return objectMapper.convertValue(extension, new TypeReference<>() {
+        });
     }
 
     @Override
@@ -311,10 +295,9 @@ public class InputParserTask implements ILifecycleTask {
             if (normalizerProvider != null) {
                 INormalizerProvider normalizer = normalizerProvider.get();
                 Object configObject = normalizerMap.get(KEY_CONFIG);
-                var providedNormalizer =
-                        configObject instanceof Map ?
-                                normalizer.provide(convertObjectToMap(configObject)) :
-                                normalizer.provide(Collections.emptyMap());
+                var providedNormalizer = configObject instanceof Map
+                        ? normalizer.provide(convertObjectToMap(configObject))
+                        : normalizer.provide(Collections.emptyMap());
 
                 normalizers.add(providedNormalizer);
             } else {
@@ -336,10 +319,9 @@ public class InputParserTask implements ILifecycleTask {
             if (dictionaryProvider != null) {
                 IDictionaryProvider dictionary = dictionaryProvider.get();
                 Object configObject = dictionaryMap.get(KEY_CONFIG);
-                var providedDictionary =
-                        configObject instanceof Map ?
-                                dictionary.provide(convertObjectToMap(configObject)) :
-                                dictionary.provide(Collections.emptyMap());
+                var providedDictionary = configObject instanceof Map
+                        ? dictionary.provide(convertObjectToMap(configObject))
+                        : dictionary.provide(Collections.emptyMap());
 
                 dictionaries.add(providedDictionary);
             } else {
@@ -362,10 +344,9 @@ public class InputParserTask implements ILifecycleTask {
             if (correctionProviderCreator != null) {
                 ICorrectionProvider correctionProvider = correctionProviderCreator.get();
                 Object configObject = correctionMap.get(KEY_CONFIG);
-                var correction =
-                        configObject instanceof Map ?
-                                correctionProvider.provide(convertObjectToMap(configObject)) :
-                                correctionProvider.provide(Collections.emptyMap());
+                var correction = configObject instanceof Map
+                        ? correctionProvider.provide(convertObjectToMap(configObject))
+                        : correctionProvider.provide(Collections.emptyMap());
 
                 correction.init(dictionaries);
                 corrections.add(correction);
@@ -380,7 +361,8 @@ public class InputParserTask implements ILifecycleTask {
     }
 
     private Map<String, Object> convertObjectToMap(Object configObject) {
-        return objectMapper.convertValue(configObject, new TypeReference<>() {});
+        return objectMapper.convertValue(configObject, new TypeReference<>() {
+        });
     }
 
     private static String getResourceType(Map<String, Object> resourceMap) {
